--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <input type="text" id="fabricType" name="fabricType" placeholder="Enter fabric type" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                     </div>
                     <div class="form-group">
-                        <label for="fabricAmount">Amount:</label>
+                        <label for="fabricAmount">Consumption:</label>
                         <select id="fabricAmount" name="fabricAmount">
                             <option value="">Select Amount</option>
                             <option value="0.1">0.1</option>
@@ -102,7 +102,7 @@
                         <input type="text" id="collarYarnType" name="collarYarnType" placeholder="Enter collar yarn type" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                     </div>
                     <div class="form-group">
-                        <label for="collarYarnAmount">Amount:</label>
+                        <label for="collarYarnAmount">Consumption:</label>
                         <select id="collarYarnAmount" name="collarYarnAmount">
                             <option value="">Select Amount</option>
                             <option value="0.048">0.048</option>
@@ -161,7 +161,7 @@
                         <input type="text" id="tippingYarnType" name="tippingYarnType" placeholder="Enter tipping yarn type" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
                     </div>
                     <div class="form-group">
-                        <label for="tippingYarnAmount">Amount:</label>
+                        <label for="tippingYarnAmount">Consumption:</label>
                         <select id="tippingYarnAmount" name="tippingYarnAmount">
                             <option value="">Select Amount</option>
                             <option value="0.005">0.005</option>
@@ -349,7 +349,7 @@
                         <input type="text" id="buttonMaterial" name="buttonMaterial" placeholder="Enter button material">
                     </div>
                     <div class="form-group">
-                        <label for="buttonAmount">Amount:</label>
+                        <label for="buttonAmount">Consumption:</label>
                         <input type="number" id="buttonAmount" name="buttonAmount" step="0.001" min="0">
                     </div>
                     <div class="form-group">
@@ -447,7 +447,7 @@
                         <input type="text" id="washCareQuality" name="washCareQuality" placeholder="Enter wash care label quality">
                     </div>
                     <div class="form-group">
-                        <label for="washCareAmount">Amount:</label>
+                        <label for="washCareAmount">Consumption:</label>
                         <input type="number" id="washCareAmount" name="washCareAmount" step="0.001" min="0">
                     </div>
                     <div class="form-group">
@@ -504,7 +504,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="wovenSizeAmount">Amount:</label>
+                        <label for="wovenSizeAmount">Consumption:</label>
                         <input type="number" id="wovenSizeAmount" name="wovenSizeAmount" step="0.001" min="0">
                     </div>
                     <div class="form-group">
