--- a/index.html
+++ b/index.html
@@ -18,20 +18,50 @@
             <!-- Order Information Section -->
             <div class="section">
                 <h2><i class="fas fa-clipboard-list"></i> Order Information</h2>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="orderNumber">Order Number:</label>
-                        <input type="text" id="orderNumber" name="orderNumber" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="orderType">Order Type:</label>
-                        <select id="orderType" name="orderType" required>
-                            <option value="">Select Type</option>
-                            <option value="organic polo">Organic Polo</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
+<div class="form-row">
+
+    <div class="form-group">
+        <label for="orderDate">Order Date:</label>
+        <input type="date" id="orderDate" name="orderDate">
+    </div>
+
+    <div class="form-group">
+        <label for="expectedDeliveryDate">Expected Delivery Date:</label>
+        <input type="date" id="expectedDeliveryDate" name="expectedDeliveryDate">
+    </div>
+
+    <div class="form-group">
+        <label for="orderNumber">Order Number:</label>
+        <input type="text" id="orderNumber" name="orderNumber" required>
+    </div>
+
+    <div class="form-group">
+        <label for="orderType">Order Type:</label>
+        <select id="orderType" name="orderType" required>
+            <option value="">Select Type</option>
+            <option value="organic polo">Organic Polo</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+  <label for="currency">Currency</label>
+  <select id="currency" name="currency" class="form-control">
+    <option value="INR" selected>INR (₹)</option>
+    <option value="USD">USD ($)</option>
+    <option value="EUR">EUR (€)</option>
+    <option value="GBP">GBP (£)</option>
+    <option value="BDT">BDT (৳)</option>
+    <option value="CNY">CNY (¥)</option>
+    <option value="JPY">JPY (¥)</option>
+    <option value="AUD">AUD ($)</option>
+    <option value="CAD">CAD ($)</option>
+  </select>
+</div>
+
+
+<br>
+
+</div>
 
             <!-- Fabric Section -->
             <div class="section">
@@ -598,7 +628,7 @@
                 <h2><i class="fas fa-calculator"></i> Total Summary</h2>
                 <div class="total-display">
                     <div class="total-item">
-                        <span>Total Amount:</span>
+                        <span>Total Consumption:</span>
                         <span id="grandTotal">&#8377;0.00</span>
                     </div>
                 </div>
@@ -608,12 +638,6 @@
             <div class="action-buttons">
                 <button type="button" id="exportExcelBtn" class="btn btn-success">
                     <i class="fas fa-file-excel"></i> Export to Excel
-                </button>
-                <button type="button" id="exportPDFBtn" class="btn btn-danger">
-                    <i class="fas fa-file-pdf"></i> Export to PDF
-                </button>
-                <button type="button" id="exportWordBtn" class="btn btn-info">
-                    <i class="fas fa-file-alt"></i> Export to TXT
                 </button>
                 <button type="button" id="clearBtn" class="btn btn-warning">
                     <i class="fas fa-eraser"></i> Clear Form
